Fixing image height on mobile (yes I know I should do responsive images)

--- a/app/globals.css
+++ b/app/globals.css
@@ -195,6 +195,10 @@ h3 {
     padding: 10px;
     border: none;
   }
+
+  .season-logo img {
+    height: 180px;
+  }
 }
 
 @media (min-width: 844px) {
@@ -224,8 +228,11 @@ a {
   margin: auto;
 }
 
-
 .player-info {
   display: flex;
   gap: 20px;
+}
+
+.season-logo img {
+  height: 180px;
 }
